[tool.poetry]
name = "sdk"
version = "0.1.0"
description = ""
authors = ["GiDaeHyeon <spliter2157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
